# miniball

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
db/: build_db.py  miniball.duckdb
notebooks/: analyse_match.py  analyse_saved_match.py  shot_displacement_timeseries.py  voronoi_demo.py
playground/: analyse_match.py  playground.py
scripts/: run_ai_v_ai_match.py
src/miniball/: ai.py  config.py  coordinate_transformations.py  coords.py  db.py  game.py  geometry.py  league.py  league_simulation.py  main.py  match_simulation.py  match_stats.py  simulation.py  team_config.py  teams.py
src/miniball/ai/: __init__.py  helpers.py  interface.py  utils.py
src/miniball/ai/ball_chasers/: __init__.py
src/miniball/ai/baseline/: __init__.py
src/miniball/ai/stationary/: __init__.py
src/miniball/ai/utils/: __init__.py  geometry.py  vis.py
src/miniball/simulation/: __init__.py  __main__.py  engine.py  recording.py  replay.py  runner.py
src/miniball/ui/: config.py  coords.py  game.py  input.py  match_view.py  pitch.py  stats_view.py  team_select.py  window.py
tests/: test_ai_utils.py  test_coordinate_transformations.py  test_game_state.py  test_hello.py  test_match_simulation.py
