[project]
name = "miniball"
description = "An analytics/programmer-friendly 2D football game"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = "==3.13.*"
dependencies = [
    "arcade>=3.3.3",
    "marimo>=0.19.9",
    "polars>=1.0.0",
    "pydantic-ai-slim>=1.67.0",
    "questionary>=2.1.1",
    "rich>=14.3.3",
    "scipy>=1.15.0",
    "shapely>=2.1.2",
    "typer>=0.24.1",
    "wigglystuff (>=0.2.36,<0.3.0)",
]
version = "0.0.0"

[dependency-groups]
dev = [
    "commitizen==4.13.0",
    "duckdb==1.4.4",
    "importlib-metadata==8.7.1",
    "pre-commit==4.5.1",
    "pytest-cov==7.0.0",
    "pytest==9.0.2",
    "pyarrow==23.0.0",
    "ruff==0.14.14",
    "sqlglot==28.10.0",
    "typing-extensions==4.15.0",
    "marimo==0.19.9",
    "polars==1.37.1",
    "seaborn==0.13.2",
    "ty==0.0.14",
]

[tool.uv]
required-version = ">=0.8.0"
native-tls = true # Use the system TLS library

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[project.urls]
"Homepage" = "https://github.com/dvatvani/miniball"
"Source" = "https://github.com/dvatvani/miniball"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=src/",
    "--cov-report=xml",
    "--cov-report=term-missing",
    "--junitxml=report.xml",
]
# https://stackoverflow.com/a/50610630
pythonpath = [
  ".",
  "src"
]

[tool.ruff]
respect-gitignore = true

[tool.commitizen]
version_provider = "uv"
